--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,11 @@
             <version>7.1.15</version>
             <type>pom</type>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 </project>
